--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.0",
+    "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "moralis": "0.0.147",
     "openzeppelin-solidity": "^2.5.0"
   }
